# iced_text_input_sample

./: Cargo.toml  iced-text-input-sample.desktop
.github/: extract_hash.sh
.github/workflows/: build.yml  publish.yml
src/: main.rs
